--- a/stockcollection/src/main/resources/application-dev.properties
+++ b/stockcollection/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # ˝æ›ø‚≈‰÷√
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/share?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/share?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=admin
 
