--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 # ˝æ›ø‚≈‰÷√
-spring.datasource.url=jdbc:mysql://47.52.105.6:3306/share?useUnicode=true&characterEncoding=utf-8
+
+spring.datasource.url=jdbc:mysql://47.52.105.6:3306/share?useUnicode=true&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=mysqladmin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
