--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -4,6 +4,15 @@ spring.datasource.url=jdbc:mysql://47.52.105.6:3306/share?useUnicode=true&autoRe
 spring.datasource.username=root
 spring.datasource.password=mysqladmin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+dataSource.bySearch.testWhileIdle = true
+dataSource.bySearch.validationQuery=SELECT 1
+dataSource.bySearch.timeBetweenEvictionRunsMillis = 36000
+
+server.tomcat.max-http-header-size=8192
+
+
+
 #增加打印sql语句，一般用于本地开发测试
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
