--- a/stockcollection/src/main/resources/application-dev.properties
+++ b/stockcollection/src/main/resources/application-dev.properties
@@ -18,3 +18,6 @@ spring.mvc.static-path-pattern=/**
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+
+logging.level.org.springframework.web: trace
+logging.level.org.apache: trace
