--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -9,7 +9,7 @@ dataSource.bySearch.testWhileIdle = true
 dataSource.bySearch.validationQuery=SELECT 1
 dataSource.bySearch.timeBetweenEvictionRunsMillis = 36000
 
-server.tomcat.max-http-header-size=8192
+server.tomcat.max-http-header-size=9000
 
 
 
@@ -27,3 +27,6 @@ spring.mvc.static-path-pattern=/**
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+
+#logging.level.org.springframework.web: trace
+#logging.level.org.apache: trace
