--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -11,6 +11,13 @@ dataSource.bySearch.timeBetweenEvictionRunsMillis = 36000
 
 server.tomcat.max-http-header-size=9000
 
+#连接池建立时创建的初始化连接数
+spring.datasource.druid.initial-size=20
+#连接池中最大的活跃连接数
+spring.datasource.druid.max-active=100
+#连接池中最小的活跃连接数
+spring.datasource.druid.min-idle=20
+
 
 
 #增加打印sql语句，一般用于本地开发测试
