--- a/stockcollection/src/main/resources/application-dev.properties
+++ b/stockcollection/src/main/resources/application-dev.properties
@@ -3,13 +3,27 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/share?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=admin
 
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+dataSource.bySearch.testWhileIdle = true
+dataSource.bySearch.validationQuery=SELECT 1
+dataSource.bySearch.timeBetweenEvictionRunsMillis = 36000
+
+server.tomcat.max-http-header-size=9000
+
+#连接池建立时创建的初始化连接数
+spring.datasource.druid.initial-size=20
+#连接池中最大的活跃连接数
+spring.datasource.druid.max-active=100
+#连接池中最小的活跃连接数
+spring.datasource.druid.min-idle=20
+
+
+
 #增加打印sql语句，一般用于本地开发测试
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.servlet.content-type=text/html
-ss
+
 spring.classpath:/static
 spring.mvc.static-path-pattern=/**
 
@@ -19,5 +33,5 @@ spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
-logging.level.org.springframework.web: trace
-logging.level.org.apache: trace
+#logging.level.org.springframework.web: trace
+#logging.level.org.apache: trace
