--- a/stockcollection/src/main/resources/application-dev.properties
+++ b/stockcollection/src/main/resources/application-dev.properties
@@ -28,6 +28,7 @@ spring.classpath:/static
 spring.mvc.static-path-pattern=/**
 
 
+
 #主要是这里，设置默认不缓存页面
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
@@ -35,3 +36,4 @@ spring.resources.chain.strategy.content.paths=/**
 
 #logging.level.org.springframework.web: trace
 #logging.level.org.apache: trace
+server.port=8080
