--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -37,3 +37,4 @@ spring.resources.chain.strategy.content.paths=/**
 
 #logging.level.org.springframework.web: trace
 #logging.level.org.apache: trace
+server.port=8080
