--- a/stockcollection/src/main/resources/application-prod.properties
+++ b/stockcollection/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 # ˝æ›ø‚≈‰÷√
 
-spring.datasource.url=jdbc:mysql://47.52.105.6:3306/share?useUnicode=true&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://106.13.55.184:3306/share?useUnicode=true&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=mysqladmin
+spring.datasource.password=wenqiang@2019!@#
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 dataSource.bySearch.testWhileIdle = true
